style : font size and color

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -11,5 +11,5 @@
     background-color: lightyellow;
   }
   .red {
-    background-color: lightcoral;
+    background-color: rgb(255, 200, 200);
   }
